# ArchMarshal

./: .gitignore  CHANGELOG.md  INSTALL_PROMPT.md  README.md  UPDATE_PROMPT.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
docs/: agent-memory-landscape-2026.md  architecture.md  cli-contract.md  filesystem-safety.md  getting-started.md  lint-rules.md  performance.md  product-readiness.md  product-requirements.md  project-file-lifecycle.md  release-process.md  safe-lifecycle.md  skill-taxonomy.md
examples/: audit-report.md
examples/monorepo-project/: AGENTS.md
examples/monorepo-project/.agent/: INDEX.md  memory-records.yaml  memory-stores.yaml  registry.yaml  workspace.yaml
examples/simple-project/: AGENTS.md
examples/simple-project/.agent/: INDEX.md  memory-records.yaml  memory-stores.yaml  registry.yaml  workspace.yaml
examples/simple-project/src/: README.md
plugins/archmarshal/: engine.lock.json
plugins/archmarshal/.codex-plugin/: plugin.json
plugins/archmarshal/scripts/: invoke_archmarshal.py  run_archmarshal.py  update_support.py
schemas/: skill-manifest.schema.yaml  workspace.schema.yaml
scripts/: benchmark_scale.py  build_plugin_engine_lock.py  check_coverage.py  check_version_contract.py  inventory.py  package_smoke.py
src/archmarshal/: __init__.py  _doctor_core.py  _doctor_immutable.py  _doctor_sessions.py  _doctor_workspace.py  adoption.py  adoption_tx.py  audit.py  candidate_draft.py  catalog.py  checkpoint.py  cli.py  closeout.py  diagnostics.py  doctor.py  errors.py  formats.py  inventory.py  io.py  layout_policy.py  learning.py  lifecycle.py  lint.py  ownership.py  planner.py  promotion.py  resolver.py  safety.py  schema_validation.py  session.py  skill_index.py  skill_review.py  skill_validation.py  user_store.py  workspace_layout.py  workspace_lock.py
src/archmarshal/schemas/: __init__.py  artifact-registry.schema.yaml  memory-records.schema.yaml  memory-stores.schema.yaml  skill-manifest.schema.yaml  (+1 more)
templates/context-module/: README.md  module.yaml
templates/project-basic/: AGENTS.md
templates/skill-common-project/: README.md  SKILL.md  manifest.yaml
templates/skill-functional/: README.md  SKILL.md  manifest.yaml
tests/: test_archmarshal.py  test_install_prompt_and_readme.py  test_product_v011_backup_scope.py  test_product_v011_cli_contract.py  test_product_v011_coverage_gate.py  test_product_v011_recovery_restore.py  test_product_v011_skill_review_binding.py  test_product_v012_backup_descriptor.py  test_product_v012_init_activation.py  test_product_v012_lazy_cli.py  test_product_v012_package_v2.py  test_product_v013_benchmark.py  test_product_v013_candidate_draft.py  test_product_v013_codex_plugin.py  test_product_v013_doctor.py  test_product_v0141_runtime_launcher.py  test_product_v014_closeout_truth.py  test_product_v014_plugin_bootstrap.py  test_product_v014_skill_roots.py  test_product_v015_frontmatter_compatibility.py  test_product_v015_inventory_preserved_artifacts.py  test_product_v015_package_boundary_schema.py  test_product_v016_user_layout_priority.py  test_product_v017_update_support.py  test_product_v09.py  test_release_contract.py  test_safety_contracts.py  test_security_branches_v09.py  test_skill_index.py  test_user_store.py  test_workspace_layout_runtime.py
(+29 files in other folders)
