[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archmarshal"
version = "0.3.5"
description = "A lightweight control plane for agent workspace skills, context modules, and project artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
archmarshal = "archmarshal.cli:main"
archmarshal-start = "archmarshal.cli:start_main"
archmarshal-end = "archmarshal.cli:end_main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-data]
archmarshal = ["schemas/*.yaml"]
