[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "archmarshal"
version = "0.5.0"
description = "A lightweight control plane for agent workspace skills, context modules, and project artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=7.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "twine>=5.0",
]

[project.scripts]
archmarshal = "archmarshal.cli:main"
archmarshal-start = "archmarshal.cli:start_main"
archmarshal-end = "archmarshal.cli:end_main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["archmarshal"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.setuptools.package-data]
archmarshal = ["schemas/*.yaml"]
